# autoliftout

./: .coveragerc  .flake8  .gitattributes  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  DEVELOPERS.md  HANDOVER-GUIDE.md  INSTALLATION.md  LICENSE  MANIFEST.in  README.md  README.rst  USER_INPUT.md  UserGuide.md  environment.yml  handover-guide.md  memes.md  mkdocs.yml  notes-stage-positions.txt  notes.txt  protocol_liftout.yml  requirements.txt  setup.cfg  setup.py  test.txt  toDO.txt.txt
GUI/: fibsem.py  main.py  main.ui
docs/: Manufacturing.md  UserGuide.md  calibration.md  cleanup.md  index.md  liftout.md  milling.md  reset.md  started.md
imgs/: README.md
lab_tests/: alignment_ion_sem_test.py  auto_link_test.py  heidi_setup.py  jcut_protocol_test.py  liftout_needle_movement_correction.py  selectpoint.py  stage_movment_test.py  touch_needle_test.py
liftout/: AutoLiftout.py  __init__.py  _version.py  acquire.py  actions.py  align.py  autoliftout.py  calibration.py  display.py  jcut.py  jcut_protocol_test.py  lakeshore_temperature_controller.py  main.py  main2.py  mill_jcut.py  mill_trenches.py  milling.py  needle_insert_retract_test.py  needle_movement.py  needle_tracking.py  notebook.ipynb  patterning.py  protocol_autolamella.yml  protocol_liftout.yml  protocol_oxygen.yml  protocol_xenon.yml  sample.py  sputter_test.py  stage_movement.py  structures.py  test_main_syntax.py  test_patterning_states.py  touch_needle_test.py  user_input.py  utils.py  zzz_machine_learning.py  zzz_machine_learning_load_images.py  zzz_needle_and_image_processing.py  (+6 more)
notes/: notes.txt  (+3 more)
(+181 files in other folders)
