[metadata]
name = autoliftout
version = 0.0.1
author = Patrick Cleeve
author_email = Patrick.Cleeve@monash.edu
description = automated cryo-liftout
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DeMarcoLab/autoliftout
project_urls =
    Bug Tracker = https://github.com/DeMarcoLab/autoliftout/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    autoliftout_ui = autoliftout.gui.AutoLiftoutUI:main